# kunu

./: .gitignore  Justfile  LICENSE  README.md  pyproject.toml
kunu/: __init__.py  entity.py  result.py  utils.py
tests/: __main__.py
